--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,24 @@
 //YAPILACAKLAR
 
-- Settings içini doldurmak ve gerekli servisleri yazmak
-- Projedeki kötü yazılmış kodları düzeltmek (Özellikle UI Kodları)
+- Settings içini doldurmak ve gerekli servisleri yazmak -- DONE (In App Purchase ve localization kaldı.)
+- Projedeki kötü yazılmış kodları düzeltmek (Özellikle UI Kodları) --ERTELENDİ. SEARCH, DETAY VE ALERT SAYFALARI BİTİNCE BÜYÜK REFACTOR OLACAK
 - Search sayfası yapmak ve tamamen bitirmek
 - Detay sayfası yapmak ve tamamen bitirmek
 - Alert ekleyebileceğimiz bir alert detay sayfası yapmak
 - Alertleri sıralayabileceğimiz, sileceğimiz, düzenleme için alert detay sayfasına atacağımız bir alert liste sayfası yapmak
 - Mainden başlayarak bütün appi birleştirmek navigation ile
+- Projede kötü yazılmış kodları düzeltmek --BÜYÜK REFACTOR
 - Detailde grafik yapmak
-- Projede kötü yazılmış kodları düzeltmek
 - Main sayfasını kodla birleştirmek ve düzeltmek
 - App arayüzünü tamamen responsive yapmak
 - Localization eklemek
 - Temaları eklemek
 - Son testleri yapmak
+
+
+Refactor yapılırken yapılacaklar:
+
+Singleton classlarda erişilebilecek tek şey shared yapılacak ve instance oluşturma engellenecek
+Sayfalar Widgetlara ayrılacak
+Widgetlar metodlara ayrılacak
+Renkler düzenlenecek
