update: all files(for localization), en-US.json

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,5 +1,125 @@
 {
-    "title" : "Title",
-    "app_local_demo" : "Application localization example",
-    "demo_details" : "This is a sample project to change the language with a drop down menu of languages"
-    }
+    "SETTINGS_SCREEN_APP_BAR_TEXT":"Settings",
+    "SETTINGS_SCREEN_FORM_HEADER_OTHERS":"Others",
+    "SETTINGS_SCREEN_FORM_SHARE_TITLE":"Share",
+    "SETTINGS_SCREEN_FORM_CONTACT_TITLE":"Contact",
+    "SETTINGS_SCREEN_FORM_CONTACT_SUBTITLE":"Contract with us to tell your problems & suggestions",
+    "SETTINGS_SCREEN_FORM_RATE_TITLE":"Rate App",
+    "SETTINGS_SCREEN_FORM_RATE_SUBTITLE":"Support us",
+
+
+    "SETTINGS_SCREEN_FORM_HEADER_SETTINGS":"Settings",
+    "SETTINGS_SCREEN_FORM_LANGUAGE_TITLE":"Language",
+    "SETTINGS_SCREEN_FORM_THEME_TITLE":"Theme",
+    "SETTINGS_SCREEN_FORM_LANGUAGES_SELECTION_TITLE":"Languages",
+    "SETTINGS_SCREEN_FORM_THEMES_SELECTION_TITLE":"Themes",
+
+    "SETTINGS_SCREEN_IAP_CARD_TITLE":"Remove Ads",
+    "SETTINGS_SCREEN_IAP_CARD_SUBTITLE":"For a better experience.",
+
+    "SEARCH_SCREEN_APP_BAR_TITLE_SEARCH":"Search",
+    "SEARCH_SCREEN_APP_BAR_TITLE_TRENDS":"Trends",
+
+
+    "ONBOARD_SCREEN_DATA_NOTIFICATON_DESCRIPTION":"notif desc",
+    "ONBOARD_SCREEN_DATA_NOTIFICATON_TITLE":"notif title",
+    "ONBOARD_SCREEN_DATA_CATEGORY_DESCRIPTION":"category desc",
+    "ONBOARD_SCREEN_DATA_CATEGORY_TITLE":"category title",
+    "ONBOARD_SCREEN_DATA_DETAIL_DESCRIPTION":"detail desc",
+    "ONBOARD_SCREEN_DATA_DETAIL_TITLE":"detail title",
+    "ONBOARD_SCREEN_DATA_THEME_DESCRIPTION":"theme desc",
+    "ONBOARD_SCREEN_DATA_THEME_TITLE":"theme title",
+
+    "INAPP_SCREEN_APP_BAR_TITLE":"Purchase",
+    "INAPP_SCREEN_RESTORE_BUTTON_TEXT":"Restore Purchase",
+    "INAPP_SCREEN_BUY_BUTTON_TEXT":"Remove Ads",
+    "INAPP_SCREEN_TITLE_TEXT":"We know that ads are annoying. Aren't they?",
+    "INAPP_SCREEN_DESCRIPTION_TEXT":"You can both remove all the ads on the app permanently and support us with 1$",
+
+    "HOME_SCREEN_APP_BAR_TITLE":"Home",
+    "HOME_SCREEN_INTERTVAL_SELECTION_PAGE_TITLE":"Set Interval",
+    "HOME_SCREEN_ORDER_SELECTION_PAGE_TITLE":"Set Sort Order",
+    "HOME_SCREEN_CATEGORY_SELECTION_PAGE_TITLE":"Set Category",
+    "HOME_SCREEN_REFRESHED_SNACK_MESSAGE":"Refreshed",
+    "HOME_SCREEN_HEADER_RANK_TITLE":"#",
+    "HOME_SCREEN_HEADER_COIN_TITLE":"Coin",
+    "HOME_SCREEN_HEADER_PRICE_TITLE":"Price",
+    "HOME_SCREEN_HEADER_MARKETCAP_TITLE":"Market Cap",
+
+    "DETAIL_SCREEN_VIEWMODEL_SHARE_TEXT":"Hey! Check out {} coin",
+    "DETAIL_INFO_SCREEN_HOME_PAGE_LINK_TEXT":"Home Page",
+    "DETAIL_SCREEN_INFORMATION_ROW_MARKET_CAP_RANK_TEXT":"MARKET CAP RANK",
+    "DETAIL_SCREEN_INFORMATION_ROW_MARKET_CAP_TEXT":"MARKET CAP",
+    "DETAIL_SCREEN_INFORMATION_ROW_TRADING_VOLUME_TEXT":"TRADING VOLUME",
+    "DETAIL_SCREEN_INFORMATION_ROW_24H_HIGH_TEXT":"24H HIGH",
+    "DETAIL_SCREEN_INFORMATION_ROW_24H_LOW_TEXT":"24H LOW",
+    "DETAIL_SCREEN_INFORMATION_ROW_AVAILABLE_SUPPLY_TEXT":"AVAILABLE SUPPLY",
+    "DETAIL_SCREEN_INFORMATION_ROW_TOTAL_SUPPLY_TEXT":"TOTAL SUPPLY",
+    "DETAIL_SCREEN_INFORMATION_ROW_ALLTIME_HIGH_TEXT":"ALL-TIME HIGH",
+    "DETAIL_SCREEN_INFORMATION_ROW_SINCE_ALLTIME_HIGH_TEXT":"SINCE ALL-TIME HIGH",
+    "DETAIL_SCREEN_INFORMATION_ROW_ALL_TIME_HIGH_DATE_TEXT":"ALL-TIME HIGH DATE",
+    "DETAIL_SCREEN_INFORMATION_ROW_ALLTIME_LOW_TEXT":"ALL-TIME LOW",
+    "DETAIL_SCREEN_INFORMATION_ROW_SINCE_ALLTIME_LOW_TEXT":"SINCE ALL-TIME LOW",
+    "DETAIL_SCREEN_INFORMATION_ROW_ALL_TIME_LOW_DATE_TEXT":"ALL-TIME LOW DATE",
+    "DETAIL_SCREEN_HOURS_TABLE_24H_TEXT":"24H",
+    "DETAIL_SCREEN_HOURS_TABLE_7D_TEXT":"7D",
+    "DETAIL_SCREEN_HOURS_TABLE_14D_TEXT":"14D",
+    "DETAIL_SCREEN_HOURS_TABLE_30D_TEXT":"30D",
+    "DETAIL_SCREEN_HOURS_TABLE_60D_TEXT":"60D",
+    "DETAIL_SCREEN_HOURS_TABLE_1Y_TEXT":"1Y",
+    "DETAIL_SCREEN_COIN_CHART_FAILURE_TEXT":"Something went wrong while getting chart. Give it an another shot.",
+    "DETAIL_SCREEN_CHART_OPTION_VALUE_24H_TEXT":"24H",
+    "DETAIL_SCREEN_CHART_OPTION_VALUE_3D_TEXT":"3D",
+    "DETAIL_SCREEN_CHART_OPTION_VALUE_7D_TEXT":"7D",
+    "DETAIL_SCREEN_CHART_OPTION_VALUE_15D_TEXT":"15D",
+    "DETAIL_SCREEN_CHART_OPTION_VALUE_1M_TEXT":"1M",
+    "DETAIL_SCREEN_CHART_OPTION_VALUE_MAX_TEXT":"MAX",
+
+    "ALERT_LIST_SCREEN_APP_BAR_TITLE":"Alerts",
+    "ALERT_LIST_SCREEN_PERMISSION_REQUEST_TITLE":"Turn on notifications",
+    "ALERT_LIST_SCREEN_PERMISSION_REQUEST_SUBTITLE": "We noticed that you didn't give us permission to do that. Please click here turn on your notifications.",
+    "ALERT_LIST_SCREEN_NO_ALERT_TITLE":"Oh! You have no alert :(",
+    "ALERT_LIST_SCREEN_NO_ALERT_SUBTITLE":"You can add alert from the plus icon",
+    "ALERT_LIST_SCREEN_ALERT_CELL_REMOVE_TEXT":"REMOVE",
+    "ALERT_LIST_SCREEN_ALERT_CELL_TARGET_TEXT":"Target: {}",
+    "ALERT_LIST_SCREEN_ALERT_CELL_CURRENT_TEXT":"Current: {}",
+
+    "ALERT_DETAIL_SCREEN_APP_BAR_TITLE_ADD":"Add",
+    "ALERT_DETAIL_SCREEN_APP_BAR_TITLE_UPDATE":"Update",
+    "ALERT_DETAIL_SCREEN_APP_BAR_TITLE_FULL":"{} Price Alert",
+    "ALERT_DETAIL_SCREEN_EXPLANATION_TEXT":"When the price hits the target price, an alert will be sent to you via app notificaiton. To receive alerts, please allow your phone settings notification permission.",
+    "ALERT_DETAIL_SCREEN_ALERT_VIEWMODEL_ALERT_ADD_SUCCESS_SNACK_MESSAGE":"Alert has been added successfully",
+    "ALERT_DETAIL_SCREEN_ALERT_VIEWMODEL_ALERT_ADD_FAILURE_SNACK_MESSAGE":"Something went wrong. Try again.",
+    "ALERT_DETAIL_SCREEN_ALERT_VIEWMODEL_ALERT_UPDATE_SUCCESS_SNACK_MESSAGE":"Alert has been updated successfully",
+    "ALERT_DETAIL_SCREEN_ALERT_VIEWMODEL_ALERT_UPDATE_FAILURE_SNACK_MESSAGE":"Something went wrong. Try again.",
+    "ALERT_DETAIL_SCREEN_ALERT_VIEWMODEL_ALERT_DELETE_SUCCESS_SNACK_MESSAGE":"deleted succesfully",
+    "ALERT_DETAIL_SCREEN_ALERT_VIEWMODEL_ALERT_DELETE_FAILURE_SNACK_MESSAGE":"deleting failed",
+    "ALERT_DETAIL_SCREEN_ALERT_VIEWMODEL_TEXTFIELD_NOT_VALID_NUMBER_SNACK_MESSAGE":"You should enter a valid number.",
+    "ALERT_DETAIL_SCREEN_BUTTON_UPDATE_TEXT":"UPDATE",
+    "ALERT_DETAIL_SCREEN_BUTTON_SAVE_TEXT":"SAVE",
+    "ALERT_DETAIL_SCREEN_CURRENT_PRICE_TEXT":"Current Price: {}",
+
+    "GLOBAL_COMPONENT_FAILURE_WIDGET_EXPLANATION_TEXT":"Oops, something went wrong, but be calm - let's give it another shot.",
+    "GLOBAL_COMPONENT_FAILURE_WIDGET_BUTTON_TEXT":"Try Again",
+
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_SORT_GECKO_ASC_DISPLAY_VALUE":"Smart Ranking Ascending",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_SORT_GECKO_DESC_DISPLAY_VALUE":"Smart Ranking Descending",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_SORT_ID_ASC_DISPLAY_VALUE":"Ascending ID",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_SORT_ID_DESC_DISPLAY_VALUE":"Descending ID",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_SORT_MARKETCAP_ASC_DISPLAY_VALUE":"Smallest Market Cap",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_SORT_MARKETCAP_DESC_DISPLAY_VALUE":"Largest Market Cap",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_SORT_VOLUME_ASC_DISPLAY_VALUE":"Ascending Volume",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_SORT_VOLUME_DESC_DISPLAY_VALUE":"Descending Volume",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_DATE_1H_DISPLAY_VALUE":"1H",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_DATE_24H_DISPLAY_VALUE":"24H",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_DATE_7D_DISPLAY_VALUE":"7D",
+    "MARKET_FEATURE_LISTING_ENUM_MARKET_DATE_30D_DISPLAY_VALUE":"30D",
+
+    "MINI_SERVICE_SHARE_MAIN_TEXT":"Hey, I found an app that shows you a lot of information about cryptocurrencies. Check it out! [LINK]",
+    "MINI_SERVICE_SHARE_SUBJECT_TEXT":"Coin Dino Subject",
+
+
+    "MINI_SERVICE_URL_LAUNCHER_SEND_CONTANT_MAIL_SUBJECT_TEXT":"Feedback",
+    "MINI_SERVICE_URL_LAUNCHER_SEND_CONTANT_MAIL_BODY_TEXT":"Hello, I have a feedback for Coin Dino."
+}
+
