--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -1,5 +1,6 @@
 {
-    "title" : "Título",
+    
+"title" : "FRENCH TITLE",
 "app_local_demo" : "Ejemplo de localización de aplicaciones",
 "demo_details" : "Este es un proyecto de ejemplo para cambiar el idioma con un menú desplegable de idiomas"
 }
