--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -1,5 +1,5 @@
 {
-    "title" : "Título",
+    "title" : "TURKISH TITLE",
 "app_local_demo" : "Ejemplo de localización de aplicaciones",
 "demo_details" : "Este es un proyecto de ejemplo para cambiar el idioma con un menú desplegable de idiomas"
 }
